# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff_check.yml
gendiff/: cli.py  comparer.py  file_parsing.py  generate_diff.py  parsers.py
gendiff/formatters/: formatters.py
gendiff/parsers/: common.py  plain_parser.py  stylish_parser.py
gendiff/scripts/: gendiff.py
hexlet_code/scripts/: gendiff.py
parsers/: common.py  json_parser.py  plain_parser.py  stylish_parser.py
tests/: test_gendiff.py
tests/fixtures/: current_output  file4.json  output_hexlet_tests  output_json_nested  output_nested_json  test_output1
