[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Troshchk <ktroshchenkova@ripe.net>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
